# phantom-editor

./: .gitignore  README.md  config.py  countlines.sh  extract_wav_from_mp4.sh  mkdocs.yml  noise_reduction.sh  phantom  process_audio.sh  pyproject.toml  update_phantom.sh
audio-processing/: extract_wav_from_mp4.sh  normalize_audio.sh  process_audio.sh
discover/: package.json
discover_api/: main.py  routes.py
docs/: audio-processing.md  filmora-automation.md  index.md  instagram.md  kokoro-tts.md  linkedin.md  recording.md  review.md  shorts.md  tiktok.md  twitter.md  video-editing.md  youtube-api.md
emails/: get_segment_info.py  resend_broadcast.py  sync_contacts_to_segment.py
filmora-automation/: filmora_silence_detection.py
instagram/: upload_reel.py
kokoro-tts/: demo.py  makesound.py  savesound.py
linkedin/: authenticate.py  new_post.py
recording/: record_in_sync.py
review/: find_bad_takes.py  utils.py  video_inspector.py
shorts/: add_thumbnail.py  auto_trim_shorts.py  clean_metadata.py  create_bulk_metadata.py  metadata_utils.py  process_shorts.py  upload.py
site/: 404.html  index.html
swipefile/: fetch_popular_videos.py
tiktok/: upload_tiktok.py
twitter/: login.py  post_tweet.py  tweet.sh
video-editing/: add_bgm_to_video.sh  attach_webcam_mask.py  auto_attach_webcam_mask.py  auto_caption.py  auto_trim_shorts.py  transcribe.py  transcribe_cloud.py  trim_silences.py  trim_silences_whisper.py  utils.py
youtube-api/: create_metadata.py  fetch_popular_videos.py  fetch_videos.py  print_all_videos.py  recommend_related_videos.py  (+1 more)
(+39 files in other folders)
