[project]
name = "editing-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.2.1",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "groq>=1.5.0",
    "instagrapi[video]>=2.16.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "pillow>=12.2.0",
    "playwright>=1.58.0",
    "pygments>=2.20.0",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "resend>=2.6.0",
    "scipy>=1.17.1",
    "tiktok-uploader>=1.2.0",
    "tqdm>=4.67.3",
]

